Prevent editing textarea from overflowing out of bodyContent
Per suggestion by Daniel Friesen, this change adds a box-sizing specification to prevent the editing textarea from overflowing from the bodyContent in vector, monobook, and modern skins.

Bug: 40610

--- a/skins/common/commonElements.css
+++ b/skins/common/commonElements.css
@@ -227,6 +227,7 @@ form {
 textarea {
 	width: 100%;
 	padding: .1em;
+	box-sizing: border-box;
 }
 select {
 	vertical-align: top;
